# restAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  seed.py
api/: activity.py  auth.py  organization.py
app/activity/: crud.py  model.py  schema.py  service.py
app/building/: crud.py  model.py  schema.py
app/organization/: crud.py  model.py  schema.py  service.py
core/auth/: __init__.py  api_key.py  schema.py  service.py
core/base/: config.py  logger.py  schema.py
core/database/: crud.py  model.py  session.py
migrations/: env.py
migrations/versions/: 8aa49252c5cd_init_table.py
